<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.foodrecipe.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_saved"
        android:name="com.example.foodrecipe.ui.saved.SavedFragment"
        android:label="@string/title_saved"
        tools:layout="@layout/fragment_saved" />

    <fragment
        android:id="@+id/navigation_addrecipe"
        android:name="com.example.foodrecipe.ui.addrecipe.AddRecipeFragment"
        android:label="@string/title_addrecipe"
        tools:layout="@layout/fragment_add_recipe" >
        <action
            android:id="@+id/action_addrecipe_to_mypost"
            app:destination="@id/navigation_mypost" />

        <action
            android:id="@+id/action_addrecipe_to_recipedetails"
            app:destination="@id/navigation_recipedetails" />
    </fragment>

    <fragment
        android:id="@+id/navigation_mypost"
        android:name="com.example.foodrecipe.ui.mypost.MyPostFragment"
        android:label="@string/title_mypost"
        tools:layout="@layout/fragment_my_post" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.foodrecipe.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_recipedetails"
        android:name="com.example.foodrecipe.ui.RecipeDetailsFragment"
        android:label="@string/title_recipedetails"
        tools:layout="@layout/fragment_recipe_details">

        <action
            android:id="@+id/action_recipedetails_to_addrecipe"
            app:destination="@id/navigation_addrecipe" />
    </fragment>
</navigation>