<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addrecipe.AddRecipeFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginHorizontal="30dp"
        android:paddingTop="30dp">

        <ImageView
            android:id="@+id/ivUploadRecipeImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@mipmap/img_default" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUploadRecipeImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            style="@style/CustomButton"
            android:text="@string/label_btn_upload_image"/>

        <EditText
            android:id="@+id/etRecipeName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/et_style"
            android:hint="@string/label_recipe_name"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:backgroundTint="#f5f5f5"
            android:paddingLeft="20dp"/>

        <EditText
            android:id="@+id/etRecipeDesc"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:minHeight="45dp"
            android:background="@drawable/et_style"
            android:hint="@string/label_recipe_description"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#f5f5f5"
            android:paddingLeft="20dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <Spinner
            android:id="@+id/spRecipeCategory"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:textSize="18dp"
            android:paddingLeft="20dp"
            android:text="Select Recipe Category" />

        <EditText
            android:id="@+id/etRecipeIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp"
            android:background="@drawable/et_style"
            android:hint="@string/label_recipe_ingredients"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#f5f5f5"
            android:paddingLeft="20dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/tvRecipeStepsLabel"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:paddingTop="10dp"
                android:paddingLeft="20dp"
                android:text="@string/label_recipe_steps"
                android:textSize="18dp" />

            <ImageButton
                android:id="@+id/ibStepInfo"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_info_24" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llStepsWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/step1"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvRecipeStep1"
                    android:layout_width="30dp"
                    android:layout_height="45dp"
                    android:text="1"
                    android:paddingLeft="20dp"
                    android:textSize="18dp" />

                <EditText
                    android:tag="etRecipeStepDesc1"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:minHeight="45dp"
                    android:background="@drawable/et_style"
                    android:hint="@string/label_recipe_step_description"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:backgroundTint="#f5f5f5"
                    android:paddingLeft="15dp"
                    android:layout_marginLeft="10dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"/>

                <EditText
                    android:tag="etRecipeStepTime1"
                    android:layout_width="70dp"
                    android:layout_height="45dp"
                    android:background="@drawable/et_style"
                    android:hint="@string/label_recipe_time"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:layout_marginLeft="8dp"
                    android:backgroundTint="#f5f5f5"
                    android:paddingLeft="15dp"/>
            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/ibAddStep"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="fitXY"
            android:padding="0dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_baseline_add_box_24" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/CustomButton"
            android:text="@string/label_btn_publish_recipe" />

        <Button
            android:id="@+id/btnUpdateRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            android:text="@string/label_btn_update_recipe" />

        <Button
            android:id="@+id/btnMyPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="my post" />

        <Button
            android:id="@+id/btnJowynRecipeDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="jowyn self recipe details" />

        <Button
            android:id="@+id/btnWjRecipeDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="wj others recipe details" />

    </LinearLayout>
</ScrollView>