<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="35dp"
        android:textStyle="bold"
        android:letterSpacing="0.03"
        android:paddingTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text1"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:letterSpacing="0.03"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:textAlignment="center"
        android:paddingTop="10dp"
        />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:src="@drawable/image" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:background="@drawable/et_style"
        android:hint="Email"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#f5f5f5"
        android:paddingLeft="20dp"/>

    <EditText
        android:id="@+id/password_et"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:background="@drawable/et_style"
        android:hint="Password"
        android:textColor="@color/black"
        android:backgroundTint="#f5f5f5"
        android:textSize="18dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"/>


    <Button
        android:id="@+id/login_btn"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="Login"
        android:textSize="18dp"
        android:textStyle="bold"
        style="@style/CustomButton"
        android:textColor="#FFF"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/signup_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text2"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginTop="15dp"/>

</LinearLayout>