<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:layout_width="245dp"
        android:layout_height="192dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/user" />

    <EditText
        android:id="@+id/user_et"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:background="@drawable/et_style"
        android:hint="Name"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#f5f5f5"
        android:paddingLeft="20dp"/>

    <EditText
        android:id="@+id/email_et"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:background="@drawable/et_style"
        android:hint="Email"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#f5f5f5"
        android:paddingLeft="20dp"/>

    <EditText
        android:id="@+id/pw_et"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:background="@drawable/et_style"
        android:hint="Password"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#f5f5f5"
        android:paddingLeft="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_account"
        android:layout_marginTop="30dp"
        android:textColor="#FFF"
        style="@style/CustomButton"
        android:drawableStart="@drawable/ic_edit"
        android:drawablePadding="8dp"
        android:id="@+id/update_btn"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_account"
        android:layout_marginTop="10dp"
        android:textColor="#FFF"
        android:drawableStart="@drawable/ic_delete"
        android:drawablePadding="8dp"
        style="@style/CustomButton"
        android:id="@+id/delete_btn"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:layout_marginTop="10dp"
        android:textColor="#FFF"
        android:drawableStart="@drawable/ic_out"
        android:drawablePadding="8dp"
        style="@style/CustomButton"
        android:id="@+id/logout_btn"/>
</LinearLayout>