<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RecipeDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivRecipeImage"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@mipmap/img_default" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/top_rounded_corner"
            android:orientation="vertical"
            android:translationY="-55dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="40dp">

                <TextView
                    android:id="@+id/tvRecipeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="Recipe Name"
                    android:textSize="20dp" />

                <ImageButton
                    android:id="@+id/ibDuplicateRecipe"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:background="@color/white"
                    android:src="@drawable/ic_baseline_content_copy_24"/>

                <ImageButton
                    android:id="@+id/ibEditRecipe"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:visibility="gone"
                    android:background="@color/white"
                    android:src="@drawable/ic_baseline_edit_24"/>

                <ImageButton
                    android:id="@+id/ibDeleteRecipe"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="5dp"
                    android:visibility="gone"
                    android:background="@color/white"
                    android:src="@drawable/ic_baseline_delete_24"/>
            </LinearLayout>


            <TextView
                android:id="@+id/tvRecipeUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="42dp"
                android:text="by " />

            <TextView
                android:id="@+id/tvRecipeCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="40dp"
                android:background="@drawable/badge_background"
                android:paddingHorizontal="13dp"
                android:paddingVertical="5dp"
                android:text="Recipe Category" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="40dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/ibSaveRecipe"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@color/white"
                        android:src="@drawable/ic_baseline_bookmark_24"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_icon_save" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/light_grey"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@color/white"
                        android:src="@drawable/ic_baseline_mode_comment_24"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_icon_comment" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/light_grey"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/ibShareRecipe"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@color/white"
                        android:src="@drawable/ic_baseline_share_24"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_icon_share" />

                </LinearLayout>

            </LinearLayout>



            <TextView
                android:id="@+id/tvRecipeDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginHorizontal="40dp"
                android:inputType="textMultiLine"
                android:text="Recipe Description" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="25dp"
                android:background="@color/light_grey"/>

            <TextView
                android:id="@+id/tvRecipeIngredientsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:textStyle="bold"
                android:text="@string/label_ingredients_title"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvRecipeIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="40dp"
                android:inputType="textMultiLine"
                android:text="Recipe Ingredients" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginVertical="25dp"
                android:background="@color/light_grey"/>

            <TextView
                android:id="@+id/tvRecipeStepTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:textStyle="bold"
                android:text="@string/label_recipe_steps"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvRecipeSteps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="40dp"
                android:inputType="textMultiLine"
                android:text="Recipe Steps" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnStartToCook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="30dp"
                style="@style/CustomButton"
                android:text="@string/label_start_to_cook" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>